# chronoveil

./: .gitignore  main.py  pyproject.toml
chronoveil/controllers/: main_controller.py  settings_controller.py
chronoveil/core/: orm.py
chronoveil/core/enums/: __init__.py  api_format.py  language.py  provider.py  setting.py  theme.py
chronoveil/core/managers/: __init__.py  database_manager.py  language_manager.py  settings_manager.py
chronoveil/core/models/: __init__.py  database_items.py  llm_settings.py
chronoveil/core/services/: __init__.py  database_services.py
chronoveil/core/state_machines/: __init__.py  splash_state_machine.py
chronoveil/core/tasks/: __init__.py  database_task.py  database_tasks.py
chronoveil/resources/translations/: en_US.ts  zh_CN.ts
chronoveil/utils/: __init__.py  animate.py  blur.py  logger.py
chronoveil/views/: chat_view.py  dashboard_view.py  general_setting_panel.py  general_settings_panel.py  llm_settings_panel.py  main_window.py  settings_view.py
chronoveil/views/components/: __init__.py  dashboard_top_card.py  session_card.py  splash_screen.py  start_splash_screen.py
chronoveil/views/panels/: __init__.py  llm_settings_panel.py  session_panel.py  sessions_panel.py
script/: complie_resources.py  update_translations.py
tests/: Test Requirements.md
tests/test_core/test_managers/: test_settings_manager.py
tests/test_core/test_models/: test_database_items.py  test_llm_settings.py
tests/test_core/test_services/: test_database_services.py
tests/test_core/test_state_machines/: test_splash_state_machine.py
tests/test_core/test_tasks/: test_database_tasks.py
tests/test_utils/: test_blur.py  test_logger.py
tests/test_views/test_components/: test_dashboard_top_card.py
